A simple script for running the performance test remotely.